Chinook demo, AnalyticsPanel added